--- a/001.html
+++ b/001.html
@@ -75,19 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A5100002025121211562</div></li>
+                    <div class="detail-value " id="reqNo">A5200002025122911562</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">四川省，重庆市，湖北省，湖南省</div></li>
+				<div class="detail-value " id="passDists">贵州省，云南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年12月16日14时05分至 2025年12月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年12月30日16时05分至 2026年01月20日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">四川省</span>:代市收费站--S15（SX）广安绕城高速--G42沪蓉高速--川渝界；<br><hr>
-<span id="pro">重庆市</span>:渝川界--G42沪蓉高速--G50沪渝高速--G5515张南高速--G65包茂高速--G5515张南高速--渝鄂界；<br><hr>
-<span id="pro">湖北省</span>:鄂渝界--G5515张南高速--G6911安来高速--S99龙吉高速--鄂湘界；<br><hr>
-<span id="pro">湖南省</span>:湘鄂界--S99龙吉高速--G5515张南高速--G5513长张高速--G56杭瑞高速--G5513长张高速--长沙西收费站--岳麓西大道--岳麓大道北辅路--规划路--湖南兰天君天汽车销售有限公司<br><hr></div></li>
+<span id="pro">贵州省</span>:瓮安收费站--S30江黔高速--G69银百高速--G6002贵阳绕城高速--G60沪昆高速--G7612纳兴高速--G78汕昆高速--黔滇界；<br><hr>
+<span id="pro">云南省</span>:滇黔界--G78汕昆高速--S11威砚高速--白水收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">史雨奇</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -100,7 +98,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">旋挖钻机</div></li>
+                    <div class="detail-value " id="cargoInfo">挖掘机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">42.69吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -136,10 +134,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-四川省：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
-重庆市：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
-湖北省：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
-湖南省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+贵州省：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
+云南省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
