--- a/016.html
+++ b/016.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4500002025122402317</div></li>
+                    <div class="detail-value " id="reqNo">A4400002025122902317</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广西壮族自治区，广东省</div></li>
+				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年12月25日16时17分至 2025年12月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年12月31日16时17分至 2026年01月07日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广西壮族自治区</span>:中国石化广西能源集团博白文地加油站--S313--文地收费站--S63玉湛高速--桂粤界；<br><hr>
-<span id="pro">广东省</span>:粤桂界--S63玉湛高速--竹园立交--G15沈海高速--雷州收费站--G207--广东奋勇东盟产业园<br><hr></div></li>
+<span id="pro">广东省</span>:中国石油茂名鳌头加油站--X613--鳌头收费站--G15沈海高速--G65包茂高速--粤桂界；<br><hr>
+<span id="pro">广西壮族自治区</span>:桂粤界--G65包茂高速--大隆收费站--X211--农村金融综合服务站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -134,8 +134,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-广西壮族自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-广东省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+广西壮族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
