--- a/007.html
+++ b/007.html
@@ -75,19 +75,19 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4200002025121702317</div></li>
+                    <div class="detail-value " id="reqNo">A4200002025122902317</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">湖北省,河南省,河北省,天津市</div></li>
+				<div class="detail-value " id="passDists">湖北省，湖南省，广西壮族自治区，广东省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年12月19日17时20分至 2025年12月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年12月31日17时20分至 2026年01月10日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖北省</span>:环宇机械加工--G348-鸦南收费站-G59呼北高速--G42沪蓉高速-G55二广高速-鄂豫界；<br><hr>
-<span id="pro">河南省</span>:豫鄂界--G55二广高速-S83兰南高速-G0421许广高速-G4京港澳高速-豫冀界；<br><hr>
-<span id="pro">河北省</span>:冀豫界-G4京港澳高速-G0211津石高速-冀津界；<br><hr>
-<span id="pro">天津市</span>:津冀界--G0211津石高速-G2京沪高速-静海收费站-G336-梁头镇<br><hr>
+<span id="pro">湖北省</span>:环宇机械加工--G348-鸦南收费站-G59呼北高速-S88岳宜高速-G55二广高速-鄂湘界；<br><hr>
+<span id="pro">湖南省</span>:湘鄂界-G55二广高速-G60沪昆高速-S91洞城高速-G7221衡南高速-湘桂界；<br><hr>
+<span id="pro">广西壮族自治区</span>:桂湘界-G7221衡南高速-G65包茂高速-G59呼北高速-S1701玉林绕城高速-S79玉湛高速-桂粤界；<br><hr>
+<span id="pro">广东省</span>:粤桂界-S63玉湛高速-竹园立交-G15沈海高速-雷州收费站-G207-广东奋勇东盟产业园<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
@@ -101,7 +101,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">电缆盘</div></li>
+                    <div class="detail-value " id="cargoInfo">电缆线盘</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">69.70吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -138,9 +138,9 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 湖北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-河南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-河北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-天津市：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+湖南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+广西壮族自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+广东省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
